[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/Lobby.gd" id="1"]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.91, 0.52, 0.45, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MainPanel" type="PanelContainer" parent="CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(380, 500)

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/MainPanel"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 28
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 28

[node name="VBox" type="VBoxContainer" parent="CenterContainer/MainPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="HeaderSection" type="VBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBox/HeaderSection"]
unique_name_in_owner = true
layout_mode = 2
text = "Game Lobby"
horizontal_alignment = 1

[node name="InfoRow" type="HBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBox/HeaderSection"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 24

[node name="ModeLabel" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBox/HeaderSection/InfoRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Mode: Online"

[node name="RoomLabel" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBox/HeaderSection/InfoRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Room: ABC123"

[node name="Separator1" type="HSeparator" parent="CenterContainer/MainPanel/MarginContainer/VBox"]
layout_mode = 2

[node name="PlayersSection" type="VBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="PlayersHeader" type="Label" parent="CenterContainer/MainPanel/MarginContainer/VBox/PlayersSection"]
unique_name_in_owner = true
layout_mode = 2
text = "Players"
horizontal_alignment = 1

[node name="PlayersList" type="ItemList" parent="CenterContainer/MainPanel/MarginContainer/VBox/PlayersSection"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Separator2" type="HSeparator" parent="CenterContainer/MainPanel/MarginContainer/VBox"]
layout_mode = 2

[node name="ButtonsSection" type="VBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="MainButtons" type="HBoxContainer" parent="CenterContainer/MainPanel/MarginContainer/VBox/ButtonsSection"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="ReadyButton" type="Button" parent="CenterContainer/MainPanel/MarginContainer/VBox/ButtonsSection/MainButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Ready"

[node name="StartButton" type="Button" parent="CenterContainer/MainPanel/MarginContainer/VBox/ButtonsSection/MainButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Start Game"

[node name="LeaveButton" type="Button" parent="CenterContainer/MainPanel/MarginContainer/VBox/ButtonsSection"]
unique_name_in_owner = true
layout_mode = 2
text = "Leave Lobby"

[node name="StatusLog" type="RichTextLabel" parent="CenterContainer/MainPanel/MarginContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 80)
bbcode_enabled = true
scroll_following = true
